devops/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curriculo-online
  labels:
    app.kubernetes.io/name: curriculo-online
    app.kubernetes.io/part-of: curriculo-lattes-system
